[package]
name = "mirror-proxy"
version = "0.0.1"
authors = ["Dmitry Antipin <antipin.dmitry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "*"
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2" }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "io-util", "net", "macros"] }
hyper = { version = "0.14", default-features = false, features = ["client", "server", "http1", "runtime"] }
